--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
     "apollo-link": "^1.2.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.7",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.7",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
